--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: robot-log
-          path: /__w/try-schedule-for-Lu/try-schedule-for-Lu/results/log.html
+          path: /__w/try-schedule-for-Lu/try-schedule-for-Lu/results/
           retention-days: 3
